Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Billing Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Dispute Resolution</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Fraud Investigation</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Portal Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed in Portal</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Issue - Advanced</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacting PM</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Submitting Feature</fullName>
        </values>
        <values>
            <fullName>Waiting on customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Issue - Basic</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Closed in Portal</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Waiting on customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Customer_Feedback__c</fullName>
        <label>Additional Customer Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <picklist>
            <controllingField>Operating_System__c</controllingField>
            <picklistValues>
                <fullName>IE 5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox 1.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Chrome</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bugzilla__c</fullName>
        <label>Bugzilla #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age_Actual__c</fullName>
        <formula>TEXT( 
FLOOR( Now()-CreatedDate
)
)&amp;&quot; Days &quot;

&amp;TEXT(
FLOOR( 
( ( Now()-CreatedDate ) - 
FLOOR( Now()-CreatedDate )
) * 24
) 

)&amp;&quot; Hours &quot;

&amp;TEXT(
FLOOR( 
(( 
( ( Now()-CreatedDate ) - 
FLOOR( Now()-CreatedDate )
) * 24
)
-
FLOOR( 
( ( Now()-CreatedDate ) - 
FLOOR( Now()-CreatedDate )
) * 24
)) * 60 
) 

)&amp; &quot; Min&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Actual)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age_Hrs__c</fullName>
        <formula>IF( IsClosed, ROUND((ClosedDate - CreatedDate) *24 ,0), ROUND((NOW() - CreatedDate) * 24 ,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Cycletime In Business Hours</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Area__c</fullName>
        <label>Case Area</label>
        <picklist>
            <picklistValues>
                <fullName>Invoicing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Routing__c</fullName>
        <label>Case Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General/Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Disposition__c</fullName>
        <label>Close Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>New Issue - One and Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Issue - KB Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Issue - Documented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Self Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Score__c</fullName>
        <label>Customer Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demand_For_Feature__c</fullName>
        <label>Demand For Feature</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Description__c</fullName>
        <label>Old Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Subject__c</fullName>
        <label>Old Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <label>Feature Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Date__c</fullName>
        <label>Feature Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InterviewID__c</fullName>
        <label>InterviewID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <formula>Contact.Account.Number_of_Open_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <controllingField>Hardware__c</controllingField>
            <picklistValues>
                <fullName>Windows Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac 0S X 10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac 0S X 10.4 (Tiger)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac 0S X 10.5 (Leopard)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeBSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP-UX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Billing__c</fullName>
        <label>Payment Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <picklist>
            <controllingField>Case_Area__c</controllingField>
            <picklistValues>
                <fullName>Wrong Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Total on Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re__c</fullName>
        <label>ReimbursementAmout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>CASE( MOD(VALUE( CaseNumber ),3), 0, &quot;Queue 1&quot;, 1, &quot;Queue 2&quot;, 2, &quot;Queue 3&quot;, &quot;Invalid ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Origin, 
&quot;Email&quot;, &quot;015o0000000LqHD&amp;oid=&quot;&amp;$Organization.Id,
&quot;Phone&quot;, &quot;015o0000000LqHE&amp;oid=&quot;&amp;$Organization.Id,
&quot;Facebook&quot;, &quot;015o0000000LqHF&amp;oid=&quot;&amp;$Organization.Id,
&quot;Twitter&quot;, &quot;015o0000000LqHG&amp;oid=&quot;&amp;$Organization.Id,
&quot;Website&quot;, &quot;015o0000000LqHH&amp;oid=&quot;&amp;$Organization.Id,
&quot;Google&quot;, &quot;015o0000000LqHI&amp;oid=&quot;&amp;$Organization.Id,
&quot;Chat&quot;, &quot;015o0000000LqHJ&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Portal&quot;, &quot;015o0000000LqHH&amp;oid=&quot;&amp;$Organization.Id,
&quot;Chatter Answers&quot;, &quot;015o0000000LqHK&amp;oid=&quot;&amp;$Organization.Id,
&quot;015o0000000LqHE&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE(CASE( Priority, &quot;Medium&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Low&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;High&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;Critical&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;&quot;),&quot;Current Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Technical Question</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-User-Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Admin Guide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SvcForCandidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tied_to_revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to revenue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <description>Check profile to identify User Group</description>
        <formula>CASE( $Profile.Name , &quot;Standard user&quot;, &quot;Sales&quot;, &quot;Marketing User&quot;, &quot;Marketing&quot;, &quot;General&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Deal__c</fullName>
        <label>Value of Deal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZMG__ZMG_Survey_Completed__c</fullName>
        <description>Used to signify a survey has been completed in the Zoomerang system.</description>
        <label>ZMG_Survey Completed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__twitterId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GeneralQueue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>General Queue</label>
        <language>en_US</language>
        <queue>Tier2EscalationQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Status_Indicator__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ProductManagement</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Management</label>
        <queue>ProductManagement</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SLA_Entitlements_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.MILESTONE_STATUSICON</columns>
        <filterScope>Queue</filterScope>
        <label>SLA Entitlements Queue</label>
        <language>en_US</language>
        <queue>SLAEntitlementsQueue</queue>
    </listViews>
    <listViews>
        <fullName>Tier2EscalationQueue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Status_Indicator__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Escalation Queue</label>
        <queue>Tier2EscalationQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BillingIssue</fullName>
        <active>true</active>
        <businessProcess>Billing Process</businessProcess>
        <description>Use for Billing/Invoicing related issues</description>
        <label>Billing Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Case</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <label>Community Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustPortalBillingIssue</fullName>
        <active>true</active>
        <businessProcess>Portal Process</businessProcess>
        <description>Please use the following Record Type for all Billing-related customer service issues.</description>
        <label>Cust Portal - Billing Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustPortalTechnicalIssue</fullName>
        <active>true</active>
        <businessProcess>Portal Process</businessProcess>
        <description>Please use the following Record Type for Technical issues that require Systems Engineers support</description>
        <label>Cust Portal - Technical Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_to_Case</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <label>Email to Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Inquiry_Case</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>General Inquiry Case - DEC BLD EXC 6</description>
        <label>General Inquiry Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Issue_Bug_Feature_Request</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>Use for Feature Requests and Bug/Defect Tracking</description>
        <label>Bug/Feature Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Issue_Field_Service</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>Use for Field Service Requests that require RMA processing</description>
        <label>Field Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Issue_Knowledge</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>Use for customer Technical Issues - Knowledge</description>
        <label>*Technical Issue - Knowledge*</label>
    </recordTypes>
    <recordTypes>
        <fullName>TechnicalIssueAdvanced</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>Please use the following Record Type for all Feature Requests, Questions or other adminstrative issues.</description>
        <label>Technical Issue - Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>TechnicalIssueBasic</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>Use for Cases logged against Service Contracts (SLA)</description>
        <label>Entitlement Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Twitter</fullName>
        <active>true</active>
        <businessProcess>Technical Issue - Basic</businessProcess>
        <description>Use for cases that are inbound from Facebook/Twitter</description>
        <label>Social Service Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ReimAMountRule</fullName>
        <active>true</active>
        <errorConditionFormula>Re__c &gt; 1000</errorConditionFormula>
        <errorMessage>Cannot be greater than 1000</errorMessage>
    </validationRules>
</CustomObject>